2004-02-28  Richard Hult  <richard@imendio.com>

	* src/drw-monitor.c: Remove old crufty includes. Fixes bug
	#135300.

2004-02-17  Richard Hult  <richard@imendio.com>

	* src/drwright.c:
	* src/drw-break-window.c: Merge from typing-monitor.

2004-02-02  Richard Hult  <richard@imendio.com>

	* configure.in: Add auto option for dbus and default to that.

	* src/drw-break-window.c (drw_break_window_init): Add mnemonic to
	postpone button.

	* src/drwright.c: Grab the keyboard to make the mnemonic work.

2004-02-01  Robert Sedak  <robert.sedak@sk.htnet.hr>

        * configure.in: Added "hr" (Croatian) to ALL_LINGUAS.

2004-01-13  Laurent Dhima  <laurenti@alblinux.net>

	* configure.in: Added "sq" to ALL_LINGUAS.

2004-01-04  Richard Hult  <richard@imendio.com>

	* autogen.sh:
	* .cvsignore:
	* Makefile.am: intltool-foo.

	* configure.in:
	* src/Makefile.am:
	* src/drw-break-window.c:
	* src/drwright.c: Merge from typing-monitor and add some
	experimental d-bus stuff.

2003-12-03  Sanlig Badral  <badral@openmn.org>

	* configure.in: Added "mn" to ALL_LINGUAS.

2003-10-05  Marcel Telka  <marcel@telka.sk>

	* configure.in (ALL_LINGUAS): Added sk.

2003-09-01  Metin Amiroff  <metin@karegen.com>

	configure.in: Added "az" in ALL_LINGUAS.

2003-08-28  Hasbullah Bin Pit <sebol@ikhlas.com>
                                                                                
        * configure.in: Added 'ms' (Malay) to ALL_LINGUAS.

2003-08-24  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added "no" to ALL_LINGUAS.

2003-07-20  Danilo Šegan  <dsegan@gmx.net>

	* configure.in: Added "sr@Latn" to ALL_LINGUAS.

2003-06-29  Richard Hult  <richard@imendio.com>

	* src/*.c: Include gnome-i18n.h instead of drw-intl.h. Use macro
	for gconf path instead of hard coding it throughout the code.

	* src/drwright.c: Tweak the popup menu a bit, fix the tooltip, and
	a few other small fixes.

2003-06-26  Richard Hult  <richard@imendio.com>
